--- a/src/views/portafolio/allPortfolios.hbs
+++ b/src/views/portafolio/allPortfolios.hbs
@@ -2,7 +2,7 @@
 <section class="page-section mt-5" id="login">
     <div class="container">
         <!-- Contact Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">All my Portfolios</h2>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Todos mis Productos</h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
@@ -16,7 +16,7 @@
                 <div class="container">
                         <div class="text-end mb-3">
                             <a href="/portafolio/add" class="text-decoration-none">
-                                <button class="btn btn-success btn-xl" type="submit">Create new portfolio</button>
+                                <button class="btn btn-success btn-xl" type="submit">Agregar nuevo Producto</button>
                             </a>
                         </div>
                     <div class="row justify-content-center">
@@ -30,24 +30,20 @@
                                     <p class="card-text">{{description}}</p>
                                     <small class="text-muted">{{category}}</small>
                                 </div>
-                                <div class="card-footer text-center">
-                                    <button class="btn btn-primary btn-sm">More infromation</button>
-
-
-                                    
+                                
                                     <a href="/portafolio/edit/{{_id}}" >
-                                    <button class="btn btn-warning btn-sm">Update</button>
+                                    <button class="btn btn-warning btn-sm">Editar</button>
                                     </a>
 
 
                                     <form action="/portafolio/delete/{{_id}}?_method=DELETE" method="POST" class="d-inline">
                                     <input type="hidden" name="_method" value="DELETE">
-                                    <button class="btn btn-danger btn-sm">Delete</button>
+                                    <button class="btn btn-danger btn-sm">Eliminar</button>
                                     </form>
 
 
 
-                                </div>
+                                
                             </div>
                         </div>
                         {{/each}}
