--- a/src/views/portafolio/editPortfolio.hbs
+++ b/src/views/portafolio/editPortfolio.hbs
@@ -2,7 +2,7 @@
         <section class="page-section mt-5" id="login">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Update Portfolio</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Editar Producto</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -23,36 +23,36 @@
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="title" type="text" placeholder="Enter your title..." required name="title"
                                 value="{{portfolio.title}}"/>
-                                <label for="title">Title</label>
+                                <label for="title">Nombre del Producto</label>
                             </div>
 
                             <!-- Category input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="category" type="text" placeholder="Enter your title..." required name="category"
                                 value="{{portfolio.category}}"/>
-                                <label for="category">Category</label>
+                                <label for="category">Categoría del producto</label>
                             </div>
 
                             <!-- Image input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="image" type="file" placeholder="Select your imagen..."  name="image" />
-                                <label for="image">Image</label>
+                                <label for="image">Imagen del producto </label>
                             </div>
 
                             <!-- Description input-->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control" id="description" type="text" placeholder="Enter your message here..." style="height: 10rem" required name="description">{{portfolio.description}}</textarea>
-                                <label for="description">Description</label>
+                                <label for="description">Descripción del producto</label>
                             </div>
 
                             <!-- Submit Button-->
                             <div class="text-start">
-                            <button class="btn btn-primary btn-xl d-block w-100" type="submit">Send</button>
+                            <button class="btn btn-primary btn-xl d-block w-100" type="submit">Guardar Prodcuto</button>
                             </div>
                         </form>
                         <div class="text-end mt-3">
                             <a href="/portafolios" class="text-decoration-none">
-                                <button class="btn btn-secondary btn-xl d-block w-100 h-10" type="submit">Cancel</button>
+                                <button class="btn btn-secondary btn-xl d-block w-100 h-10" type="submit">Cancelar</button>
                             </a>
                         </div>
                     </div>
