--- a/src/views/portafolio/newFormPortafolio.hbs
+++ b/src/views/portafolio/newFormPortafolio.hbs
@@ -2,7 +2,7 @@
         <section class="page-section mt-5" id="login">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">New Portfolio</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Nuevo Producto</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -19,29 +19,29 @@
                             <!-- Title input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="title" type="text" placeholder="Enter your title..." required name="title"/>
-                                <label for="title">Title</label>
+                                <label for="title">Nombre del Producto</label>
                             </div>
 
                             <!-- Category input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="category" type="text" placeholder="Enter your title..." required name="category"/>
-                                <label for="category">Category</label>
+                                <label for="category">Categoría del Prodcuto</label>
                             </div>
                             
                             <!-- Image input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="image" type="file" placeholder="Select your imagen..." required name="image"/>
-                                <label for="image">Image</label>
+                                <label for="image">Imagén del Producto</label>
                             </div>
 
                             <!-- Description input-->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control" id="description" type="text" placeholder="Enter your message here..." style="height: 10rem" required name="description"></textarea>
-                                <label for="description">Description</label>
+                                <label for="description">Descripción del producto</label>
                             </div>
 
                             <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl" type="submit">Send</button>
+                            <button class="btn btn-primary btn-xl" type="submit">Guardar Producto</button>
 
                         </form>
 
