--- a/src/views/user/registerForm.hbs
+++ b/src/views/user/registerForm.hbs
@@ -2,7 +2,7 @@
         <section class="page-section mt-5" id="login">
             <div class="container">
                 <!-- Register Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Register</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Registrar</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
