--- a/src/views/user/forgotPasswordForm.hbs
+++ b/src/views/user/forgotPasswordForm.hbs
@@ -1,8 +1,8 @@
-<!-- Login Section-->
+<!-- Forgot Password Section-->
 <section class="page-section mt-5" id="login">
     <div class="container">
         <!-- Login Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Administrador</h2>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Recuperar Contraseña</h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
@@ -21,21 +21,12 @@
                 <!-- to get an API token!-->
                 {{#if message}}
                 <script>
-                    document.addEventListener("DOMContentLoaded", function () {
+                    document.addEventListener("DOMContentLoaded", function() {
                         showAlert('{{message}}', '{{messageType}}');
                     });
                 </script>
                 {{/if}}
-                <form action="/user/login" method="post">
-
-                    <!-- Name input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="name" type="text" name="name" placeholder="Enter your name..."
-                            data-sb-validations="required" />
-                        <label for="name">Nombre Completo</label>
-                        <div class="invalid-feedback" data-sb-feedback="name:required">Es necesario rellenar este
-                            apartado.</div>
-                    </div>
+                <form action="/user/recover-password" method="post">
                     <!-- Email address input-->
                     <div class="form-floating mb-3">
                         <input class="form-control" id="email" type="email" name="email" placeholder="name@example.com"
@@ -44,14 +35,6 @@
                         <div class="invalid-feedback" data-sb-feedback="email:required">Es necesario rellenar este
                             apartado.</div>
                         <div class="invalid-feedback" data-sb-feedback="email:email">El correo no es válido.</div>
-                    </div>
-                    <!-- Password input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="password" type="password" name="password"
-                            placeholder="Enter your password..." data-sb-validations="required" />
-                        <label for="password">Contraseña</label>
-                        <div class="invalid-feedback" data-sb-feedback="password:required">Su contraseña es necesario.
-                        </div>
                     </div>
 
                     <!-- Submit success message-->
@@ -75,13 +58,8 @@
                         <div class="text-center text-danger mb-3">Error al ingresar!</div>
                     </div>
                     <!-- Submit Button-->
-                    <button class="btn btn-primary btn-xl d-block w-100" type="submit">Entrar</button>
+                    <button class="btn btn-primary btn-xl d-block w-100" type="submit">Recuperar</button>
                 </form>
-                <div class="text-end mt-3">
-                    <a href="/user/forgot_password" class="text-decoration-none">
-                        ¿Olvido su contraseña?
-                    </a>
-                </div>
             </div>
         </div>
     </div>
