--- a/src/views/user/recoveryPasswordForm.hbs
+++ b/src/views/user/recoveryPasswordForm.hbs
@@ -1,8 +1,8 @@
-<!-- Login Section-->
+<!-- New Passowrd Section-->
 <section class="page-section mt-5" id="login">
     <div class="container">
         <!-- Login Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Administrador</h2>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Nueva Contraseña</h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
@@ -21,37 +21,25 @@
                 <!-- to get an API token!-->
                 {{#if message}}
                 <script>
-                    document.addEventListener("DOMContentLoaded", function () {
+                    document.addEventListener("DOMContentLoaded", function() {
                         showAlert('{{message}}', '{{messageType}}');
                     });
                 </script>
                 {{/if}}
-                <form action="/user/login" method="post">
-
-                    <!-- Name input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="name" type="text" name="name" placeholder="Enter your name..."
-                            data-sb-validations="required" />
-                        <label for="name">Nombre Completo</label>
-                        <div class="invalid-feedback" data-sb-feedback="name:required">Es necesario rellenar este
-                            apartado.</div>
-                    </div>
-                    <!-- Email address input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="email" type="email" name="email" placeholder="name@example.com"
-                            data-sb-validations="required,email" />
-                        <label for="email">Correo Electrónico </label>
-                        <div class="invalid-feedback" data-sb-feedback="email:required">Es necesario rellenar este
-                            apartado.</div>
-                        <div class="invalid-feedback" data-sb-feedback="email:email">El correo no es válido.</div>
-                    </div>
+                <form action="/user/new-password/{{token}}" method="post">
                     <!-- Password input-->
                     <div class="form-floating mb-3">
                         <input class="form-control" id="password" type="password" name="password"
                             placeholder="Enter your password..." data-sb-validations="required" />
-                        <label for="password">Contraseña</label>
-                        <div class="invalid-feedback" data-sb-feedback="password:required">Su contraseña es necesario.
-                        </div>
+                        <label for="password">Password</label>
+                        <div class="invalid-feedback" data-sb-feedback="password:required">Contraseña es requerida.</div>
+                    </div>
+                    <!-- Confirm Password input-->
+                    <div class="form-floating mb-3">
+                        <input class="form-control" id="confirmpassword" type="password" name="confirmpassword"
+                            placeholder="Enter your password..." data-sb-validations="required" />
+                        <label for="confirmpassword">Confirmar contraseña</label>
+                        <div class="invalid-feedback" data-sb-feedback="confirmpassword:required">Confirmar la contraseña es requerida.</div>
                     </div>
 
                     <!-- Submit success message-->
@@ -75,11 +63,11 @@
                         <div class="text-center text-danger mb-3">Error al ingresar!</div>
                     </div>
                     <!-- Submit Button-->
-                    <button class="btn btn-primary btn-xl d-block w-100" type="submit">Entrar</button>
+                    <button class="btn btn-primary btn-xl d-block w-100" type="submit">Recuperar</button>
                 </form>
                 <div class="text-end mt-3">
-                    <a href="/user/forgot_password" class="text-decoration-none">
-                        ¿Olvido su contraseña?
+                    <a href="/user/login" class="text-decoration-none">
+                        <button class="btn btn-secondary btn-xl d-block w-100 h-10" type="submit">Cancel</button>
                     </a>
                 </div>
             </div>
